--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,4 +1,5 @@
 .profile__image {
+  position: relative;
   width: 120px;
   height: 120px;
   -webkit-border-radius: 50%;
@@ -7,6 +8,16 @@
   background-size: cover;
   background-position: center;
   margin: 0 29px 0 0;
+}
+
+.profile__image:hover::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: url('/src/images/Vector.svg') center no-repeat rgba(0, 0, 0, 0.8);
+  width: 100%;
+  height: 100%;
 }
 
 @media screen and (max-width: 740px) {
