feat: add loader logo

--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -10,6 +10,10 @@
   margin: 0 29px 0 0;
 }
 
+.profile__image-hidden {
+  visibility: hidden;
+}
+
 .profile__image:hover::before {
   content: '';
   position: absolute;
