--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,3 +1,5 @@
+@import url('../blocks/loader/loader-logo.css');
+@import url('../blocks/loader/loader-visible.css');
 @import url('../vendor/normalize.css');
 @import url('../vendor/fonts.css');
 @import url('../blocks/page/page.css');
